--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chartist": "^0.11.0",
     "grommet": "^1.8.3",
+    "grommet-addons": "^0.5.0",
     "grommet-css": "^1.6.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
