--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grommet": "^1.8.3",
     "grommet-addons": "^0.5.0",
     "grommet-css": "^1.6.0",
+    "nuka-carousel": "^3.0.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-router": "^4.2.0",
