--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "chartist": "^0.11.0",
     "grommet": "^1.8.3",
     "grommet-addons": "^0.5.0",
     "grommet-css": "^1.6.0",
+    "immutability-helper": "^2.4.0",
     "nuka-carousel": "^3.0.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
