--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-springy-parallax": "^1.1.0",
     "react-transition-group": "^2.2.1",
     "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.75.1"
+    "semantic-ui-react": "^0.75.1",
+    "typed.js": "^2.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
