add workflow for bungie oauth

--- a/.gitignore
+++ b/.gitignore
@@ -258,4 +258,7 @@ buck-out/
 !.vscode/extensions.json
 .history
 
+### CUSTOM ###
+.env
+
 # End of https://www.gitignore.io/api/node,macos,reactnative,visualstudiocode
