--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "chartist": "^0.11.0",
+    "dotenv": "^4.0.0",
     "grommet": "^1.8.3",
     "grommet-addons": "^0.5.0",
     "grommet-css": "^1.6.0",
