--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "brianbolnick",
   "version": "0.1.0",
+  "homepage" : "https://brianbolnick.herokuapp.com",
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
@@ -15,11 +16,15 @@
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-iframe": "^1.0.7",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.0.14",
     "react-springy-parallax": "^1.1.0",
     "react-transition-group": "^2.2.1",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
     "typed.js": "^2.0.6"
