bug fix for blank page

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brianbolnick",
   "version": "0.1.0",
-  "homepage" : "https://brianbolnick.herokuapp.com",
+  "homepage" : "http://brianbolnick.com",
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
