--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
   "name": "brianbolnick",
   "version": "0.1.0",
-  "homepage": "http://brianbolnick.com",
+  "homepage": "https://brianbolnick.com",
   "private": true,
   "dependencies": {
-    "antd": "^3.1.4",
-    "axios": "^0.16.2",
-    "chartist": "^0.11.0",
-    "dotenv": "^4.0.0",
-    "grommet": "^1.8.3",
-    "grommet-addons": "^0.5.0",
-    "grommet-css": "^1.6.0",
-    "immutability-helper": "^2.4.0",
-    "jwt-decode": "^2.2.0",
-    "nuka-carousel": "^3.0.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-iframe": "^1.0.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.0.14",
-    "react-springy-parallax": "^1.1.0",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
