--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
