--- a/package.json
+++ b/package.json
@@ -4,19 +4,17 @@
   "homepage": "https://brianbolnick.com",
   "private": true,
   "dependencies": {
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-lazyload": "^2.3.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-scripts": "1.0.14",
-    "react-transition-group": "^2.2.1",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.75.1",
+    "react-scripts": "3.2.0",
+		"react-transition-group": "^4.3.0",
+		"semantic-ui-css": "^2.2.12",
+		"semantic-ui-react": "^0.88.1",
     "typed.js": "^2.0.6"
   },
   "scripts": {
@@ -24,5 +22,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
